--- a/css/style.css
+++ b/css/style.css
@@ -7,14 +7,69 @@
 
 
 html{
+    font-family: 'Stick No Bills', sans-serif;
     font-size: 62.5%;
 }
 /* diseños del contenido proncipal */
+
+/* Etilos del logotipo */
+.logo{
+  display: block;
+  margin: 0  auto;
+  max-width: 20rem;
+
+}
+
+
+/*Con esto ni el los ul ni input aparecen */
+ul, input{
+  display: none;
+ 
+}
+
+
+
+label {
+  position: absolute;
+  font-size: 3rem;
+  font-weight: bold;
+  padding: 1rem;
+  user-select: none; /*Esto hace que el usuario no pueda seleccionar el contenido*/ 
+}
+
+input:checked  ~ ul{
+  display:flex;
+  background: #000046;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #1CB5E0, #000046);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #1CB5E0, #000046); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  flex-direction: column;
+  width: 100%;
+  height: auto;
+  align-items: center;
+  list-style: none;
+  padding: 5%;
+  font-size: 2.3rem;
+  color: white;
+}
+label:hover{
+  cursor: pointer;
+}
+
+.nav li{
+    text-align: center;
+      text-decoration: none;
+      padding: 3%;
+      border-bottom: 0.1rem solid white;
+      width: 100%;
+}
+
+
 .main{
     display: flex;
     flex-direction: column;
     text-align: center;
-    font-size: 1.5rem;
+    font-size: 2rem;
+    
 }
 
 .main__first,
@@ -27,6 +82,23 @@ html{
     width: 100%;
 }
 
+.main__first img{
+  width: 70%;
+}
+
+.main__first h1,
+.main__second h1,
+.main__third h1,
+.main__fourth h1,
+.main__sixth h1{
+ background-color: #760d0d;
+ color: white;
+ border-radius: .5rem;
+ margin-bottom: .5rem;
+
+}
+
+
 .main__third img {
     width: 20rem;
     height: 20rem;
@@ -35,7 +107,7 @@ html{
 /*Carusel de cursos*/
 .slider {
     margin: 0 auto;
-    width: 30rem;
+    width: 90%;
     text-align: center;
     overflow: hidden;
   }
@@ -49,7 +121,7 @@ html{
 
   }
   .slides::-webkit-scrollbar {
-    width: 10rem;
+    width: 1rem;
     height: 1rem;
   }
   .slides::-webkit-scrollbar-thumb {
@@ -93,6 +165,14 @@ html{
 
 
 /*Experiencia*/
+.center{
+  margin: 0 auto;
+  background-color: #760d0d;
+  color: white;
+  border-radius: .5rem;
+  margin-bottom: .5rem;
+  width: 90%;
+}
 
 .main__fiveth {
     display: flex;
@@ -134,53 +214,6 @@ html{
     font-size: 1.5rem;
 }
 
-/* Etilos del logotipo */
-.logo{
-    display: block;
-    margin: 0  auto;
-    max-width: 10rem;
-
-}
-
-
-/*Con esto ni el los ul ni input aparecen */
-ul, input{
-    display: none;
-   
-}
-
-
-
-  label {
-    position: absolute;
-    font-size: 3rem;
-    font-weight: bold;
-    padding: 1rem;
-    user-select: none; /*Esto hace que el usuario no pueda seleccionar el contenido*/ 
-  }
-
-  input:checked  ~ ul{
-    display:flex;
-    background: #000046;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #1CB5E0, #000046);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #1CB5E0, #000046); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    flex-direction: column;
-    width: 100%;
-    height: auto;
-    align-items: center;
-    list-style: none;
-    padding: 5%;
-    font-size: 2.3rem;
-    color: white;
-  }
-
-  .nav li{
-      text-align: center;
-        text-decoration: none;
-        padding: 3%;
-        border-bottom: 0.1rem solid white;
-        width: 100%;
-  }
 
 
 
