--- a/css/style.css
+++ b/css/style.css
@@ -192,13 +192,14 @@ label:hover{
 .main__sixth div{
     display: flex;
     flex-direction: column;
-    align-items: baseline;
-    margin: 1rem;
+    text-align: left;
     
 
 }
 .main__sixth i {
     font-size: 2rem;
+    padding-top: 2rem;
+
     
 }
 
