Estilos de destok full

--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,7 @@ label:hover{
     background: transparent;
   }
   .slides > div {
+    margin: 1.5rem;
     padding: 1rem;
     scroll-snap-align: start;
     flex-shrink: 0;
@@ -207,8 +208,7 @@ label:hover{
     display: flex;
     width: 100%;
     min-height: 10vh;
-    background: -webkit-linear-gradient(to right, #1CB5E0, #000046);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #1CB5E0, #000046); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+   background-color: #760d0d;
     align-items: center;
     justify-content: center;
     color: white;
