--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,11 @@
 }
 
 
+body{
+  background-color: #ffffff;
+background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%2320002c' fill-opacity='0.4' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
+}
+
 html{
     font-family: 'Stick No Bills', sans-serif;
     font-size: 62.5%;
@@ -30,18 +35,21 @@ ul, input{
 
 
 label {
+  
   position: absolute;
   font-size: 3rem;
   font-weight: bold;
   padding: 1rem;
+  background-color: white;
+  margin-left: 1rem;
   user-select: none; /*Esto hace que el usuario no pueda seleccionar el contenido*/ 
 }
 
 input:checked  ~ ul{
   display:flex;
-  background: #000046;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #1CB5E0, #000046);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #1CB5E0, #000046); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #000428; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #000428, #004e92); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #000428, #004e92); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   flex-direction: column;
   width: 100%;
   height: auto;
@@ -51,6 +59,7 @@ input:checked  ~ ul{
   font-size: 2.3rem;
   color: white;
 }
+
 label:hover{
   cursor: pointer;
 }
@@ -61,8 +70,14 @@ label:hover{
       padding: 3%;
       border-bottom: 0.1rem solid white;
       width: 100%;
+      color: white;
 }
 
+.nav li a {
+
+    color: white;
+    text-decoration: none;
+}
 
 .main{
     display: flex;
@@ -83,7 +98,9 @@ label:hover{
 }
 
 .main__first img{
-  width: 70%;
+  width:100%;
+  margin-top: 1.5rem;
+  border-radius: 2rem;
 }
 
 .main__first h1,
@@ -91,17 +108,46 @@ label:hover{
 .main__third h1,
 .main__fourth h1,
 .main__sixth h1{
- background-color: #760d0d;
+  background: #000428; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #000428, #004e92); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #000428, #004e92); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
  color: white;
  border-radius: .5rem;
  margin-bottom: .5rem;
 
 }
 
+/* 
+codigo para dar fondo blanco para distingir del fondo
+.main__first p,
+.main__second p{
+
+ margin-top: 2rem;
+ background-color:white;
+
+}
+
+.bragWhite{
+ 
+  margin-top: 1rem;
+  background-color:white;
+}
+
+.centerWidth {
+  margin: 0 auto;
+  width: 60%;
+  
+}
+.centerWidth b {
+ font-size: 6rem;
+  
+} */
+
 
 .main__third img {
     width: 20rem;
     height: 20rem;
+    
 }
 
 /*Carusel de cursos*/
@@ -110,6 +156,7 @@ label:hover{
     width: 90%;
     text-align: center;
     overflow: hidden;
+    
   }
   
   .slides {
@@ -118,6 +165,7 @@ label:hover{
     scroll-snap-type: x mandatory;    
     scroll-behavior: smooth;
     -webkit-overflow-scrolling: touch;
+   
 
   }
   .slides::-webkit-scrollbar {
@@ -137,7 +185,7 @@ label:hover{
     scroll-snap-align: start;
     flex-shrink: 0;
     width: 30rem;
-    height: 25rem;
+    height: auto;
     margin-right: 1rem;
     background: rgb(193, 204, 200);
     transform-origin: center center;
@@ -148,13 +196,17 @@ label:hover{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-size: 2rem;
+    border-radius: 1.5rem;
+    
+    
   }
   .slides img{
       width: 23rem;
       padding: 1rem;
       border-radius: 2rem;
   }
+
+ 
   .slides a {
       background-color: white;
       text-decoration: none;
@@ -162,13 +214,16 @@ label:hover{
       border-radius: .5rem;
       margin: .5rem;
       color: black;
+      font-size: 3rem;
   }
 
 
 /*Experiencia*/
 .center{
   margin: 0 auto;
-  background-color: #760d0d;
+  background: #000428; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #000428, #004e92); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #000428, #004e92); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   color: white;
   border-radius: .5rem;
   margin-bottom: .5rem;
@@ -184,7 +239,8 @@ label:hover{
     margin: 2rem;
 }
 .main__fiveth img {
-    width: 20rem;
+    width: 80%;
+    height: 15rem;
     margin: 1.5rem;
 }
 
@@ -208,7 +264,9 @@ label:hover{
     display: flex;
     width: 100%;
     min-height: 10vh;
-   background-color: #760d0d;
+    background: #000428; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #000428, #004e92); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #000428, #004e92); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     align-items: center;
     justify-content: center;
     color: white;
